--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,144 @@
-.hello{
-    color: red;
-    font-size: xx-large;
-    font-weight: bold;
-    text-shadow: 5px 2px 2px black;
-}
+
 body{
-    background-color: lightblue;
+    margin: 0;
+    padding: 0;
+}
+header{
+    /* background-color: #405D72; */
+    background-color: #EEEEEE;
+}
+*{
+    box-sizing: border-box;
+}
+nav{
+    
+    justify-content: center;
+    display: flex;
+    gap: 30px;
+    padding: 10px;
+    align-items: center;
+}
+nav button{
+    font-size: 20px;
+    border: none;
+    /* background-color: white; */
+    background-color: #EEEEEE;
+    /* color: white; */
+    /* border-color: #405D72; */
+    /* background-color: #405D72; */
+}
+hr{
+    margin: 0;
+}
+
+#content{
+    padding-bottom: 20px;
+    
+    /* height: calc(100vh - 80px); */
+}
+footer{
+    padding: 15px;
+    text-align: center;
+    background-color: white;
+    /* background-color: #405D72; */
+}
+
+#hero{
+    display: grid;
+    padding: 20px;
+    background-color: #EEEEEE;
+    grid-template-columns: 1fr 1fr;
+}
+
+@media  screen and (max-width: 600px) {
+    #hero{
+        grid-template-columns: 1fr;
+    }
+    #buttons{
+        flex-direction: column;
+    }
+    
+}
+
+#hero-left div{
+    width: 100%;
+}
+#hero-left p{
+    font-size: large;
+}
+#hero-left{
+    /* background-color: blue; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#hero-right{
+    
+    padding: 20px;
+    text-align: center;
+    /* background-color: pink; */
+    
+}
+
+#hero-right img{
+    width: min(100%, 500px);
+    border-radius: 19px;
+}
+#hero-right{
+    display: flex;
+    align-items: center;
+}
+#hero p{
+
+}
+#hero h1{
+    font-size: 40px;
+    
+}
+#buttons button{
+    padding: 5px 10px;
+    border-radius: 10px;
+    width: 120px;
+    border-color: #173B45;
+    color: #EEEEEE;
+    font-size: large;
+    background-color: #173B45;
+    
+}
+#buttons{
+    
+    gap: 10px;
+    padding-top: 40px;
+    display: flex;
+    /* justify-content: center; */
+    /* background-color: lightblue; */
+}
+#menu{
+    background-color: white;
+    text-align: center;
+    padding: 40px 0px;
+}
+h3{
+    text-align: center;
+    margin: 0;
+}
+#menu-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 90%;
+    margin: auto;
+    justify-content: center;
+}
+.menu-card img{
+    border: solid 3px #405D72;
+    border-radius: 10px;
+}
+.menu-card{
+    width: 200px;
+}
+
+#menu h2{
+    font-size: 35px;
+    margin-bottom: 40px;
 }
